Guarda Registros correctamente